<resources>
    <string name="app_name">hoT6</string>
    <string name="service_name">ReviewTheReview</string>
    
    <string name="product">상품</string>
    <string name="top">상의</string>
    <string name="bottom">하의</string>
    <string name="outer">아우터</string>
    <string name="skirt">스커트</string>
    <string name="one_piece">원피스</string>
    <string name="sport_top">스포츠-상의</string>
    <string name="sport_bottom">스포츠-하의</string>
    <string name="form_total_count">전체 %d개</string>
    
    <string name="customer_review">구매 후기</string>
    <string name="write_review">리뷰 작성하기</string>
    <string name="form_review_count">리뷰 %d개</string>
    <string name="form_price">%,d원</string>
    <string name="form_point">%,d원 적립</string>
    <string name="caption_provide">본 어플리케이션은 서비스 시연을 위한 앱으로,\n실제 상품을 제공하지 않습니다.</string>
    <string name="review_of_product_empty">아직 리뷰가 없습니다.\n상품을 구매하고 첫 리뷰를 작성해 보세요!</string>

    <string name="input_review">리뷰 입력</string>
    <string name="form_text_max_thres">리뷰는 최대 %d자까지 입력 가능합니다.</string>
    <string name="input_photo">사진 입력</string>
    <string name="request_write_review">리뷰 작성하기</string>

    <string name="reject_request_review">리뷰 등록 거부</string>
    <string name="caption_reject_request_review">실제 상품과 관련이 없는 리뷰글로 판단되어 리뷰 등록이 거부되었습니다.\n실제 상품과 관련이 있는 리뷰인 경우 운영 이메일로 문의해주세요.</string>
    <string name="reject_image">이미지 등록 실패</string>
    <string name="caption_reject_image">실제 상품과 관련이 없는 이미지로 판단되어 이미지 등록이 거부되었습니다.\n실제 상품과 관련이 있는 사진만 사용가능합니다.</string>
    <string name="confirmation">확인</string>
    <string name="form_text_count">%d/%d</string>
    <string name="placeholder_review_text">텍스트를 입력해주세요.</string>
    <string name="error_empty_review">리뷰를 작성해주세요.</string>
    <string name="success_request_review">리뷰가 작성되었습니다</string>
    <string name="error_request_review">리뷰 작성중 네트워크 에러가 발생했습니다. 잠시 후 다시 시도해주세요</string>

    <string name="general_error_message">로딩 중 에러가 발생했습니다.\n잠시 후 다시 시도해주세요.</string>
</resources>