<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_back"
        android:scaleType="center"
        />

    <View
        android:id="@+id/divider_toolbar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray1"
        app:layout_constraintTop_toBottomOf="@id/btn_back"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_write_review"
        app:layout_constraintTop_toBottomOf="@id/divider_toolbar"
        android:layout_marginBottom="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_begin="16dp"
                android:orientation="vertical"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_end="16dp"
                android:orientation="vertical"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_input_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                android:layout_marginTop="30dp"
                android:text="@string/input_review"
                android:textSize="16sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_caption_input_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_input_review"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                android:layout_marginTop="4dp"
                android:text="@string/form_text_max_thres"
                android:textColor="@color/gray4"
                android:textSize="12sp"/>


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_review"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/tv_caption_input_review"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_input_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/edit_review"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                android:layout_marginTop="32dp"
                android:textSize="16sp"
                android:text="@string/input_photo"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/tv_input_photo"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                android:layout_marginTop="16dp">
                
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray1"/>
                
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btn_remove_photo"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@color/black"
                    android:tint="@color/white"
                    android:src="@drawable/ic_close"/>
                
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_add_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/gray2"
                android:tint="@color/black"
                android:src="@drawable/ic_add"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_input_photo"
                app:layout_constraintStart_toEndOf="@id/layout_photo"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_write_review"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:paddingVertical="14dp"
        android:background="@color/black"
        android:text="@string/request_write_review"
        android:textColor="@color/white"
        android:textAlignment="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>