<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.home.HomeActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_back"
        android:scaleType="center"
        />

    <View
        android:id="@+id/divider_toolbar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray1"
        app:layout_constraintTop_toBottomOf="@id/btn_back"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsc_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/divider_toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_begin="16dp"
                android:orientation="vertical"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_end="16dp"
                android:orientation="vertical"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_product_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/gray1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintDimensionRatio="1:1"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/iv_product_image"
                android:layout_marginTop="24dp"
                tools:text="상위 카테고리 > 하위 카테고리"
                android:textColor="@color/gray3"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/tv_category"
                android:layout_marginTop="24dp"
                android:textSize="24sp"
                tools:text="상품 이름"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_detail_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_product_name"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:textColor="@color/gray4"
                tools:text="상품에 대한 상세설명이 들어가는 부분입니다."/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_review_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_product"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                android:layout_marginTop="12dp"
                android:textSize="12sp"
                android:textColor="@color/blue"
                tools:text="리뷰 5"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_product_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_review_count"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                tools:text="139,000원"/>

            <View
                android:id="@+id/divider_price"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/tv_product_price"
                android:layout_marginTop="16dp"
                android:background="@color/black"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_hashtag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_height="30dp"
                app:layout_constraintTop_toBottomOf="@id/divider_price"
                android:layout_marginTop="16dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_caption_provide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toBottomOf="@id/list_hashtag"
                android:layout_marginTop="24dp"
                android:textSize="12sp"
                android:textColor="@color/gray4"
                android:text="@string/caption_provide"/>

            <include
                android:id="@+id/view_product_loading"
                layout="@layout/view_loading"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="@id/iv_product_image"
                app:layout_constraintBottom_toTopOf="@id/divider_review"/>

            <include
                android:id="@+id/view_product_error"
                layout="@layout/view_error"
                android:visibility="gone"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="@id/iv_product_image"
                app:layout_constraintBottom_toTopOf="@id/divider_review"/>

            <View
                android:id="@+id/divider_review"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@color/gray1"
                app:layout_constraintTop_toBottomOf="@id/tv_caption_provide"
                android:layout_marginTop="24dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_customer_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/divider_review"
                android:layout_marginTop="24dp"
                android:textSize="16sp"
                android:text="@string/customer_review"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvbtn_write_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_customer_review"
                app:layout_constraintBottom_toBottomOf="@id/tv_customer_review"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                android:textColor="@color/blue"
                android:textSize="12sp"
                android:text="@string/write_review"
                android:paddingVertical="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_customer_review"
                android:minHeight="120dp"
                android:paddingBottom="32dp"
                android:layout_marginTop="12dp" />

            <include
                android:id="@+id/view_review_loading"
                layout="@layout/view_loading"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="@id/list_review"
                app:layout_constraintBottom_toBottomOf="@id/list_review"/>

            <include
                android:id="@+id/view_review_error"
                layout="@layout/view_error"
                android:visibility="gone"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="@id/list_review"
                app:layout_constraintBottom_toBottomOf="@id/list_review"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>